# picture-perfect

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
picture_perfect/: app.py  picture.py
tests/: test_picture_perfect.py
