[tool.poetry]
name = "picture-perfect"
version = "0.1.0"
description = ""
authors = ["Alex C. Viana <alexcostaviana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
streamlit = "^0.71.0"
matplotlib = "^3.3.3"
cffi = "^1.14.3"
pycparser = "^2.20"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pytest-coverage = "^0.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
